@@ -320,7 +320,7 @@
 #define SETTINGS_SOUNDEVENT_TYPING           "soundevents/user-typing"
 #define SETTINGS_SOUNDEVENT_TYPING_DEFAULT           (SOUNDSPATH"/typing.wav")
 #define SETTINGS_SOUNDS_PACK           "soundevents/sounds-pack"
-#define SETTINGS_SOUNDS_PACK_DEFAULT           QT_TRANSLATE_NOOP("MainWindow", "Default")
+#define SETTINGS_SOUNDS_PACK_DEFAULT           "Default"
 #define SETTINGS_SOUNDEVENT_ENABLE                   "soundevents/sounds-enable"
 #define SETTINGS_SOUNDEVENT_ENABLE_DEFAULT           true
 #define SETTINGS_SOUNDEVENT_VOLUME                 "soundevents/volume"
