@@ -24,6 +24,7 @@ Default Qt Client
 - Fixed sound events disabled when migrating to 5.17 release
 - Fixed language not set at first start
 - Fixed OPUS DTX mode sending too big packets when variable bitrate mode (VBR) was disabled
+- Fixed ask to use default sounds pack at every language change (will be ask one last time)
 Android Client
 - Ability to export each server in to a .tt file separately
 - Nickname and Last Joined Channel are now stored in .tt file
